fixed gap between slider and navbar on chrome, fixed gap between buttons on navbar on chrome

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -29,21 +29,24 @@ nav > .nav-link-list {
   float:left;
 }
 
-nav > .nav-button-container {
+nav .nav-button-container {
   float:left;
   height: 100%;
   vertical-align: middle;
   display: table;
   padding-right:1.2%;
   width: 10%;
-  position: absolute;
-  right:16.5%;
-  padding-right: 6em;
+  padding-right: 1em;
 }
 
-nav > .nav-button-container:last-child {
-  right:4.5%;
+nav .nav-button-section {
+  right:16.5%;
+  position: absolute;
 }
+
+/*nav > .nav-button-container:last-child {
+  right:4.5%;
+}*/
 
 nav .nav-button-padding {
   display: table-row;
@@ -87,11 +90,11 @@ nav .login-button {
   padding: 0;
   background-color: #2c3e50;
   z-index: 6;
-  padding-bottom: 6px;
 }
 
 .login-slider {
   margin-left:80%;
+  height:7em;
 
 }
 
@@ -123,6 +126,7 @@ nav .login-button {
 
 nav input, nav textarea {
   width:90%;
+  margin-bottom: 6px;
 }
 
 nav input:focus, nav textarea:focus {
